--- a/.env
+++ b/.env
@@ -19,3 +19,7 @@ APP_SECRET=b8b8045b7f5402ac15ef743ba53c07a4
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
+
+###> app env ###
+MARK_ARTICLE_WORDS_WITH_BOLD=true
+###< app env ###
