--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "demontpx/parsedown-bundle": "^3.0",
+        "nesbot/carbon": "^2.40",
         "sensio/framework-extra-bundle": "^5.6",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
@@ -18,6 +19,7 @@
         "symfony/var-dumper": "5.1.*",
         "symfony/yaml": "5.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/string-extra": "^3.0",
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
