--- a/.env
+++ b/.env
@@ -23,3 +23,10 @@ APP_SECRET=b8b8045b7f5402ac15ef743ba53c07a4
 ###> app env ###
 MARK_ARTICLE_WORDS_WITH_BOLD=true
 ###< app env ###
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+DATABASE_URL=mysql://skillbox:skillbox@127.0.0.1:3306/cat_cas_car?serverVersion=8.0
+###< doctrine/doctrine-bundle ###
