--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,11 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "^1.11",
         "demontpx/parsedown-bundle": "^3.0",
+        "doctrine/doctrine-bundle": "^2.1",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.7",
         "nesbot/carbon": "^2.40",
         "sensio/framework-extra-bundle": "^5.6",
         "symfony/asset": "5.1.*",
@@ -17,6 +21,7 @@
         "symfony/monolog-bundle": "^3.0",
         "symfony/twig-bundle": "5.1.*",
         "symfony/var-dumper": "5.1.*",
+        "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "5.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/string-extra": "^3.0",
