домашнее задание фикстуры и расширения Doctrine

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/orm": "^2.7",
         "nesbot/carbon": "^2.40",
         "sensio/framework-extra-bundle": "^5.6",
+        "stof/doctrine-extensions-bundle": "^1.5",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/debug-bundle": "5.1.*",
@@ -28,6 +29,8 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "fzaninotto/faker": "^1.9",
         "symfony/maker-bundle": "^1.21"
     },
     "config": {
