--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/monolog-bundle": "^3.0",
+        "symfony/security-bundle": "5.1.*",
         "symfony/twig-bundle": "5.1.*",
         "symfony/var-dumper": "5.1.*",
         "symfony/webpack-encore-bundle": "^1.7",
