--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "^1.11",
         "demontpx/parsedown-bundle": "^3.0",
+        "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
         "knplabs/knp-paginator-bundle": "^5.3",
         "nesbot/carbon": "^2.40",
+        "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.6",
         "stof/doctrine-extensions-bundle": "^1.5",
         "symfony/asset": "5.1.*",
@@ -21,7 +23,10 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/monolog-bundle": "^3.0",
+        "symfony/property-access": "5.1.*",
+        "symfony/property-info": "5.1.*",
         "symfony/security-bundle": "5.1.*",
+        "symfony/serializer": "5.1.*",
         "symfony/twig-bundle": "5.1.*",
         "symfony/var-dumper": "5.1.*",
         "symfony/webpack-encore-bundle": "^1.7",
