--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,7 +38,7 @@ security:
             switch_user: true
 
     role_hierarchy:
-        ROLE_ADMIN: [ROLE_ADMIN_COMMENT, ROLE_ADMIN_TAG, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_ADMIN: [ROLE_ADMIN_COMMENT, ROLE_ADMIN_TAG, ROLE_ALLOWED_TO_SWITCH, ROLE_ADMIN_ARTICLE]
         ROLE_ADMIN_COMMENT: [ROLE_ALLOWED_TO_SWITCH]
         ROLE_ADMIN_TAG: [ROLE_ALLOWED_TO_SWITCH]
     # Easy way to control access for large sections of your site
