--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symfony/security-bundle": "5.1.*",
         "symfony/serializer": "5.1.*",
         "symfony/twig-bundle": "5.1.*",
+        "symfony/validator": "5.1.*",
         "symfony/var-dumper": "5.1.*",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "5.1.*",
