Загрузка файлов в Symfony

--- a/.env
+++ b/.env
@@ -22,6 +22,9 @@ APP_SECRET=b8b8045b7f5402ac15ef743ba53c07a4
 
 ###> app env ###
 MARK_ARTICLE_WORDS_WITH_BOLD=true
+
+SITE_URL=//localhost:8000
+
 ###< app env ###
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
