--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    article_uploads: 'uploads/articles'
+    article_uploads_url: '%env(SITE_URL)%/%article_uploads%'
+    artticle_uploads_dir: '%kernel.project_dir%/public/%article_uploads%'
 
 services:
     # default configuration for services in *this* file
@@ -13,6 +16,11 @@ services:
 
         bind:
             $markArticleWordsWithBold: '%env(bool:MARK_ARTICLE_WORDS_WITH_BOLD)%'
+
+            League\Flysystem\FilesystemInterface $articleFileSystem: '@oneup_flysystem.uploads_articles_filesystem'
+
+#            App\Service\FileUploader $articleFileUploader: '@file_uploader.article'
+#            App\Service\FileUploader $avatarFileUploader: '@file_uploader.avatar'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -34,7 +42,13 @@ services:
     # please note that last definitions always *replace* previous ones
     App\Service\MarkdownParser:
         arguments:
-            $logger: '@monolog.logger.markdown'  
+            $logger: '@monolog.logger.markdown'
+
+#    file_uploader.avatar:
+#        class: 'App\Service\FileUploader'
+#        arguments:
+#            $uploadsPath: '/path/to/upload/avatar'
+
 
 
      
