--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
         "knplabs/knp-paginator-bundle": "^5.3",
+        "liip/imagine-bundle": "^2.3",
         "nesbot/carbon": "^2.40",
+        "oneup/flysystem-bundle": "^3.5",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.6",
         "stof/doctrine-extensions-bundle": "^1.5",
@@ -23,6 +25,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/mime": "5.1.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "5.1.*",
         "symfony/property-info": "5.1.*",
