--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -12,7 +12,7 @@ security:
                 property: email
     firewalls:
         dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
+            pattern: ^/(_(profiler|wdt)|css|images|js|uploads)/
             security: false
         main:
             anonymous: true
