--- a/.env
+++ b/.env
@@ -23,7 +23,9 @@ APP_SECRET=b8b8045b7f5402ac15ef743ba53c07a4
 ###> app env ###
 MARK_ARTICLE_WORDS_WITH_BOLD=true
 
-SITE_URL=//localhost:8000
+SITE_BASE_SCHEME=https
+SITE_BASE_HOST=localhost:8000
+SITE_URL=${SITE_BASE_SCHEME}://${SITE_BASE_HOST}
 
 ###< app env ###
 ###> doctrine/doctrine-bundle ###
@@ -33,3 +35,7 @@ SITE_URL=//localhost:8000
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://skillbox:skillbox@127.0.0.1:3306/cat_cas_car?serverVersion=8.0
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
