--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
         "knplabs/knp-paginator-bundle": "^5.3",
+        "league/html-to-markdown": "^4.10",
         "liip/imagine-bundle": "^2.3",
         "nesbot/carbon": "^2.40",
         "oneup/flysystem-bundle": "^3.5",
@@ -25,6 +26,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/mailer": "5.1.*",
         "symfony/mime": "5.1.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "5.1.*",
@@ -36,6 +38,7 @@
         "symfony/var-dumper": "5.1.*",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "5.1.*",
+        "twig/cssinliner-extra": "^3.1",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/string-extra": "^3.0",
         "twig/twig": "^2.12|^3.0"
