Сервис отправки электронных писем1

--- a/.env
+++ b/.env
@@ -26,6 +26,10 @@ MARK_ARTICLE_WORDS_WITH_BOLD=true
 SITE_BASE_SCHEME=https
 SITE_BASE_HOST=localhost:8000
 SITE_URL=${SITE_BASE_SCHEME}://${SITE_BASE_HOST}
+SITE_NAME=Spill-Coffee-On-The-Keyboard
+EMAIL_NEWSLETTER=noreply@symfony.skillbox
+
+
 
 ###< app env ###
 ###> doctrine/doctrine-bundle ###
