--- a/config/services.yaml
+++ b/config/services.yaml
@@ -54,6 +54,10 @@ services:
 #        arguments:
 #            $uploadsPath: '/path/to/upload/avatar'
 
+    App\EventListener\ExampleEventListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.request, method: 'onEventHappen' }
+
 
 
      
