--- a/config/packages/symfony_skillbox_homework.yaml
+++ b/config/packages/symfony_skillbox_homework.yaml
@@ -1,7 +1,7 @@
 symfony_skillbox_homework:
   # Стратегия производства юнитов по умолчанию по силе (SymfonySkillbox\HomeworkBundle\StrengthStrategy)
   # Стратегия производства юнитов по силе (symfony_skillbox_homework.strategy_health)
-  strategy: App\Homework\BillGatesStrategy
+  strategy: symfony_skillbox_homework.strategy_health
   # Разрешено лHomeworkи производство солдат
   enable_solder: true
   # Разрешено ли производство лучников
